workloads/eks-k8s-project-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-k8s-project
  namespace: eks-k8s-project
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: eks-k8s-project
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
