workloads/eks-k8s-project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "eks-k8s-project"
  namespace: eks-k8s-project
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: "eks-k8s-project"
                port:
                  number: 80
